# mini-rag

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  test_package.py
examples/: hybrid_search_demo.py  observability_demo.py  reranking_demo.py  simple_reranker_example.py
mini/: __init__.py  chunker.py  embedding.py  loader.py  logger.py  observability.py  rag.py  reranker.py  store.py
